--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,16 @@
 {
   "rewrites": [
     { "source": "/(.*)", "destination": "/" }
+  ],
+  "routes": [
+    {
+      "src": "/user/(.*)",
+      "dest": "/api/og/$1",
+      "headers": {
+        "x-prerender-revalidate": "86400"
+      },
+      "methods": ["GET"],
+      "continue": true
+    }
   ]
 }
